fix: html measures removed / top container alignment fixes

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,14 +1,6 @@
-html
-    width: 1640px
-    height: 2488px
-
 body
-    width: 1640px
-    height: 2488px
     margin: 0
     position: relative
-    width: 87.8%
-    height: 92%
     font-family: Lato
 
 @import top-container, bottom-container, list
