--- a/sass/top-container.sass
+++ b/sass/top-container.sass
@@ -1,6 +1,9 @@
 .top-container
     width: 100%
     background-image: url('./resources/background-image.png')
+    background-size: cover
+    background-repeat: no-repeat
+    
     font-size: 20px
     padding: 12.1em 0 18.2em
 
@@ -23,8 +26,7 @@
 
 
         &__button
-            width: 32.8%
-            padding: 1em
+            padding: 1em 2em
             border-radius: 40px
             color: white
             background-color: #06040A
